5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1680_1952.log
== TEST (2019-05-01 19:14:05) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
	print(desPrev)
-- OUTPUT:
98.7648
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:54:11) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
elif(salrio <= 1903.98):
	salario = salario
#elif

	

-- ERROR:
File "XXXX", line 15
    elif(salrio <= 1903.98):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:54:30) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
elif(salario <= 1903.98):
	salario = salario
#elif

	

-- ERROR:
File "XXXX", line 15
    elif(salario <= 1903.98):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:13) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	salario = salario
#elif

	

-- ERROR:
File "XXXX", line 15
    elif(salario <= 1903.98):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:19:02) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:19:25) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.161566
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:19:51) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:20:29) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.12208
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:20:46) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:26:34) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
	print("Salario liquido = R$",round(salario_Liquido,2))
	

-- ERROR:
File "XXXX", line 27
    print("Salario liquido = R$",round(salario_Liquido,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:26:57) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
	salario_Liquido = salario - desIP
	print("Salario liquido = R$",round(salario_Liquido,2))
	

-- ERROR:
File "XXXX", line 27
    print("Salario liquido = R$",round(salario_Liquido,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:27:56) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:28:19) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.144234
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:29:22) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido= R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:29:43) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido= R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.151789
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido= R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido= R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido= R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:29:56) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:31:03) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$"round(salario_Liquido,2))
	

-- ERROR:
File "XXXX", line 27
    print("Salario liquido  = R$"round(salario_Liquido,2))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:31:21) 
-- CODE:
salarioBruto = float(input("digite o salario bruto doo funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:31:49) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.197321
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido  = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido  = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido  = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:32:15) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("salario liquido  = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.179372
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
salario liquido  = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
salario liquido  = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
salario liquido  = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:32:20) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("salario liquido  = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.133996
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
salario liquido  = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
salario liquido  = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
salario liquido  = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:32:29) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.176586
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido  = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido  = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido  = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:32:53) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:33:28) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:34:05) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:48:54) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.14676
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido  = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido  = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido  = R$ 3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:26:26) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:26:48) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$ ",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.184684
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido  = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido  = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido  = R$  3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:26:50) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido  = R$ ",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido  = R$  1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:27:12) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$ ",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.16001
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:27:15) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$ ",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$  1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:27:30) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$ ",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.135043
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:03) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$  ",round(salario_Liquido,2))
	

-- OUTPUT:
Salario liquido = R$   1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:28:11) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$  ",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.155883
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$   1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$   1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$   3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:28:20) 
-- CODE:
salarioBruto = float(input("digite o salario bruto do funcionario:"))

#desconto previdenciario
if(salarioBruto <= 1659.38):
	desPrev = salarioBruto *(8/100)
elif(salarioBruto >= 1659.39  and salarioBruto <= 2765.66 ):
	desPrev = salarioBruto *(9/100)
elif(salarioBruto >= 2765.67 and salarioBruto <= 5531.31):
	desPrev = salarioBruto * (11/100)
elif(salarioBruto > 5531.31):
	desPrev = 608.44

#deconto de inposto de renda
salario = salarioBruto - desPrev  
if(salario <= 1903.98):
	desIP = 0
elif(salario >= 1903.99 and salario <= 2826.65):
	desIP = salario * (7.5/100)
elif(salario >= 2826.66 and salario <= 3751.05):
	desIP = salrio * (15/100)
elif(salario >= 3751.06 and  salario <= 4664,68):
	desIP = salario * (22.5/100)
elif(salario > 4664.68):
	desIP = salario * (27.5/100)
	
salario_Liquido = salario - desIP
print("Salario liquido = R$ ",round(salario_Liquido,2))
	

-- EXECUTION TIME:
0.175346
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3818.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
